# AplikasiKasir

./: AplikasiKasir.cbp  AplikasiKasir.depend  AplikasiKasir.layout  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
html/: barangMasuk.html  barangTerjual.html  daftarBarang.html  dashboard.html  editBarang.html  iframe-dark.html  iframe.html  index.html  kasir.html  login.html  pengaturan.html  pengeluaran.html  tambahBarang.html  tambahBarangMasuk.html  tambahPengeluaran.html  totalPembukuan.html
html/404/: index.html
html/plugins/fa-free/: free-v4-font-face.min.css  free-v4-shims.min.css  free-v5-font-face.min.css  free.min.css
html/plugins/jquery-weekpicker/: jquery.weekpicker.js
html/plugins/other-css/: adminlte-docs.css
html/plugins/sweetalert2-dark/: dark.css
html/plugins/toggle-switchy/: toggle-switchy.css
mf_os/: Makefile-win32-mingw
src/: externStruct.c  funcVarPub.h  main.c  sqliteFunction.c  sqliteFunction.h
src/CashierFunction/: barangMasukLogic.c  cashierFindBarang.c  cashierFunction.h  cashierLogic.c  daftarBarang.c  dashboardLogic.c  dbBackup.c  dbImport.c  editBarang.c  hapusDaftarBarang.c  infoBarang.c  pembukuanLogic.c  pengaturan.c  roleLogic.c  tambahBarang.c  userLogic.c
src/alarmFunction/: alarmFunction.h  pembukuanAlarm.c
src/methodFunction/: GETFunction.c  POSTFunction.c  methodFunction.h
src/src/: externStruct.c  main.c
src/src/utils/: utils.h
src/teleFunction/: teleFunction.h  teleKasir.c  teleTotalPembukuan.c
src/telegramClient/: telegramClient.c  telegramClient.h
src/utils/: utils.c  utils.h
(+7 files in other folders)
